feat: 采购申请明细支持自定义物料-手动输入名称/单位-自动创建到材料字典